remove redeem code, slot, and user expire_time
