# routers/api/admin/redeem_code/node.go
@@ -1,3 +1,0 @@
-package redeem_code
-
-type RedeemCode struct{}
